Android local build setup (#8)